--- a/prjShotMaster/Forms/frmMain.resx
+++ b/prjShotMaster/Forms/frmMain.resx
@@ -134,9 +134,6 @@
   <data name="tsmiFile.Text" xml:space="preserve">
     <value>&amp;File</value>
   </data>
-  <data name="&gt;&gt;exitToolStripMenuItem.Name" xml:space="preserve">
-    <value>exitToolStripMenuItem</value>
-  </data>
   <data name="&gt;&gt;lblTimerIntervalDefault1.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
@@ -145,6 +142,9 @@
   </data>
   <data name="&gt;&gt;exitToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;startToolStripMenuItem1.Name" xml:space="preserve">
+    <value>startToolStripMenuItem1</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="pnlTimerIntervalDefault.TabIndex" type="System.Int32, mscorlib">
@@ -165,8 +165,8 @@
   <data name="&gt;&gt;pnlTimerIntervalDefault.Parent" xml:space="preserve">
     <value>pnlSettingsDefault</value>
   </data>
-  <data name="&gt;&gt;tsslblCountdown.Name" xml:space="preserve">
-    <value>tsslblCountdown</value>
+  <data name="stopToolStripMenuItem1.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
   </data>
   <data name="&gt;&gt;toolStrip1.Name" xml:space="preserve">
     <value>toolStrip1</value>
@@ -204,14 +204,17 @@
   <data name="lblTimerIntervalDefault.Location" type="System.Drawing.Point, System.Drawing">
     <value>3, 8</value>
   </data>
-  <data name="&gt;&gt;lblTimerIntervalDefault1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;shotNowToolStripMenuItem1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;lblTimerIntervalDefault1.Parent" xml:space="preserve">
     <value>pnlTimerIntervalDefault</value>
   </data>
   <data name="&gt;&gt;toolStrip1.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="stopToolStripMenuItem1.Text" xml:space="preserve">
+    <value>Stop</value>
   </data>
   <data name="panel1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -252,8 +255,8 @@
   <data name="lblDestinationFolderDefault.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
   </data>
-  <data name="&gt;&gt;lblDestinationFolderDefault.Parent" xml:space="preserve">
-    <value>pnlDestinationFolderDefault</value>
+  <data name="&gt;&gt;startToolStripMenuItem1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;panel1.Type" xml:space="preserve">
     <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -12632,6 +12635,9 @@
   <data name="&gt;&gt;nudTimerIntervalDefault.Type" xml:space="preserve">
     <value>System.Windows.Forms.NumericUpDown, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="stopToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>236, 24</value>
+  </data>
   <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
     <value>5, 118</value>
   </data>
@@ -12640,6 +12646,9 @@
   </data>
   <data name="&gt;&gt;msMainMenu.ZOrder" xml:space="preserve">
     <value>3</value>
+  </data>
+  <data name="pnlSettingsDefault.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom, Left, Right</value>
   </data>
   <data name="shotNowToolStripMenuItem1.Text" xml:space="preserve">
     <value>Shot now</value>
@@ -12668,6 +12677,9 @@
   <data name="&gt;&gt;toolStrip1.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
+  <data name="&gt;&gt;lblTimerIntervalDefault.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="cbPlaySoundDefault.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 21</value>
   </data>
@@ -12677,8 +12689,8 @@
   <data name="&gt;&gt;panel1.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <data name="&gt;&gt;shotNowToolStripMenuItem1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="startToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>236, 24</value>
   </data>
   <data name="&gt;&gt;shotNowToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -12694,6 +12706,9 @@
   </data>
   <data name="btntbDestinationFolderDefault.Size" type="System.Drawing.Size, System.Drawing">
     <value>23, 23</value>
+  </data>
+  <data name="&gt;&gt;stopToolStripMenuItem1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;openDestinationFolderToolStripMenuItem1.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -12719,8 +12734,11 @@
   <data name="toolStripMenuItem3.Size" type="System.Drawing.Size, System.Drawing">
     <value>233, 6</value>
   </data>
-  <data name="btnApplyDefault.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Right</value>
+  <data name="btnApplyDefault.Text" xml:space="preserve">
+    <value>&amp;Apply</value>
+  </data>
+  <data name="&gt;&gt;btnApplyDefault.Parent" xml:space="preserve">
+    <value>pnlSettingsDefault</value>
   </data>
   <data name="&gt;&gt;btntbDestinationFolderDefault.ZOrder" xml:space="preserve">
     <value>0</value>
@@ -12764,8 +12782,8 @@
   <data name="lblTimerIntervalDefault1.Size" type="System.Drawing.Size, System.Drawing">
     <value>15, 17</value>
   </data>
-  <data name="&gt;&gt;lblTimerIntervalDefault.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;exitToolStripMenuItem.Name" xml:space="preserve">
+    <value>exitToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;lblDestinationFolderDefault.ZOrder" xml:space="preserve">
     <value>1</value>
@@ -12803,14 +12821,11 @@
   <data name="&gt;&gt;fbd.Name" xml:space="preserve">
     <value>fbd</value>
   </data>
-  <data name="tbDestinationFolderDefault.Size" type="System.Drawing.Size, System.Drawing">
-    <value>364, 22</value>
-  </data>
-  <data name="&gt;&gt;ss.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
   <data name="openDestinationFolderToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>236, 24</value>
+  </data>
+  <data name="&gt;&gt;stopToolStripMenuItem1.Name" xml:space="preserve">
+    <value>stopToolStripMenuItem1</value>
   </data>
   <data name="cbPlaySoundDefault.Text" xml:space="preserve">
     <value>Play sound</value>
@@ -12830,8 +12845,8 @@
   <data name="cbCameraShot.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
   </data>
-  <data name="btnApplyDefault.Text" xml:space="preserve">
-    <value>&amp;Apply</value>
+  <data name="tsbtnStart.ToolTipText" xml:space="preserve">
+    <value>Start</value>
   </data>
   <data name="&gt;&gt;closeToolStripMenuItem.Name" xml:space="preserve">
     <value>closeToolStripMenuItem</value>
@@ -12839,8 +12854,8 @@
   <data name="pnlSettingsDefault.Size" type="System.Drawing.Size, System.Drawing">
     <value>573, 188</value>
   </data>
-  <data name="stopToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>236, 24</value>
+  <data name="lblDestinationFolderDefault.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 23</value>
   </data>
   <data name="&gt;&gt;tsmiFile.Name" xml:space="preserve">
     <value>tsmiFile</value>
@@ -12860,8 +12875,8 @@
   <data name="&gt;&gt;pnlTimerIntervalDefault.Name" xml:space="preserve">
     <value>pnlTimerIntervalDefault</value>
   </data>
-  <data name="&gt;&gt;pnlTimerIntervalDefault.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="tbDestinationFolderDefault.Size" type="System.Drawing.Size, System.Drawing">
+    <value>364, 22</value>
   </data>
   <data name="ss.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -12872,8 +12887,11 @@
   <data name="&gt;&gt;lblTimerIntervalDefault1.Name" xml:space="preserve">
     <value>lblTimerIntervalDefault1</value>
   </data>
-  <data name="pnlSettingsDefault.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Bottom, Left, Right</value>
+  <data name="&gt;&gt;lblTimerIntervalDefault1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;pnlTimerIntervalDefault.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="toolStrip1.Size" type="System.Drawing.Size, System.Drawing">
     <value>577, 27</value>
@@ -12896,6 +12914,9 @@
   <data name="&gt;&gt;btntbDestinationFolderDefault.Name" xml:space="preserve">
     <value>btntbDestinationFolderDefault</value>
   </data>
+  <data name="stopToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>236, 24</value>
+  </data>
   <data name="&gt;&gt;lblDestinationFolderDefault.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -12903,7 +12924,7 @@
     <value>130, 24</value>
   </data>
   <data name="cmsNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>237, 82</value>
+    <value>237, 130</value>
   </data>
   <data name="&gt;&gt;tmrDefault.Name" xml:space="preserve">
     <value>tmrDefault</value>
@@ -12928,6 +12949,9 @@
   </data>
   <data name="&gt;&gt;msMainMenu.Parent" xml:space="preserve">
     <value>$this</value>
+  </data>
+  <data name="btnApplyDefault.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Bottom, Right</value>
   </data>
   <data name="panel1.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -12995,6 +13019,9 @@
   <data name="cbCameraShot.Size" type="System.Drawing.Size, System.Drawing">
     <value>139, 21</value>
   </data>
+  <data name="&gt;&gt;tsslblCountdown.Name" xml:space="preserve">
+    <value>tsslblCountdown</value>
+  </data>
   <data name="&gt;&gt;tbDestinationFolderDefault.Type" xml:space="preserve">
     <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -13022,8 +13049,8 @@
   <data name="msMainMenu.Size" type="System.Drawing.Size, System.Drawing">
     <value>577, 28</value>
   </data>
-  <data name="&gt;&gt;btnApplyDefault.Parent" xml:space="preserve">
-    <value>pnlSettingsDefault</value>
+  <data name="&gt;&gt;pnlDestinationFolderDefault.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="btntbDestinationFolderDefault.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Right</value>
@@ -13049,17 +13076,17 @@
   <data name="tsbtnStop.Size" type="System.Drawing.Size, System.Drawing">
     <value>26, 24</value>
   </data>
-  <data name="tsbtnStart.ToolTipText" xml:space="preserve">
+  <data name="startToolStripMenuItem1.Text" xml:space="preserve">
     <value>Start</value>
   </data>
   <data name="cbCameraShot.Location" type="System.Drawing.Point, System.Drawing">
     <value>6, 6</value>
   </data>
-  <data name="lblDestinationFolderDefault.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 23</value>
-  </data>
   <data name="&gt;&gt;btnApplyDefault.ZOrder" xml:space="preserve">
     <value>4</value>
+  </data>
+  <data name="&gt;&gt;lblDestinationFolderDefault.Parent" xml:space="preserve">
+    <value>pnlDestinationFolderDefault</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>577, 271</value>
@@ -13100,8 +13127,8 @@
   <data name="tsmiFile.Size" type="System.Drawing.Size, System.Drawing">
     <value>44, 24</value>
   </data>
-  <data name="&gt;&gt;pnlDestinationFolderDefault.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="msMainMenu.Text" xml:space="preserve">
+    <value>menuStrip1</value>
   </data>
   <data name="&gt;&gt;cbCameraShot.Name" xml:space="preserve">
     <value>cbCameraShot</value>
@@ -13160,8 +13187,8 @@
   <data name="&gt;&gt;ss.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <data name="msMainMenu.Text" xml:space="preserve">
-    <value>menuStrip1</value>
+  <data name="&gt;&gt;ss.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
     <value>About…</value>
