--- a/prjShotMaster/Forms/frmMain.ru.resx
+++ b/prjShotMaster/Forms/frmMain.ru.resx
@@ -161,8 +161,17 @@
   <data name="lblDestinationFolderDefault.Text" xml:space="preserve">
     <value>Куда сохранять</value>
   </data>
-  <data name="cmsNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>276, 82</value>
+  <data name="stopToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>275, 24</value>
+  </data>
+  <data name="stopToolStripMenuItem1.Text" xml:space="preserve">
+    <value>Стоп</value>
+  </data>
+  <data name="startToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>275, 24</value>
+  </data>
+  <data name="startToolStripMenuItem1.Text" xml:space="preserve">
+    <value>Старт</value>
   </data>
   <data name="shotNowToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
     <value>275, 24</value>
@@ -184,6 +193,9 @@
   </data>
   <data name="closeToolStripMenuItem.Text" xml:space="preserve">
     <value>Выход</value>
+  </data>
+  <data name="cmsNotify.Size" type="System.Drawing.Size, System.Drawing">
+    <value>276, 130</value>
   </data>
   <data name="msMainMenu.Size" type="System.Drawing.Size, System.Drawing">
     <value>571, 28</value>
